border collapse fixed

--- a/marcell/style.css
+++ b/marcell/style.css
@@ -1,6 +1,6 @@
 table {
     border: 4px solid black;
-    border-collapse: separate;
+    border-collapse: collapse;
     margin: 15% auto;
     text-align: center;
     padding: 2px;
